[tool.poetry]
name = "schema-viewer"
version = "0.1.0"
description = ""
authors = ["statifc0x <44530786+staticf0x@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.1"
jsonref = "^1.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
devtools = {extras = ["pygments"], version = "^0.12.0"}

[tool.poetry.scripts]
schema-viewer = { callable = "main:main" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "G",
    "ICN",
    "ISC",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]
line-length = 100
